Enhance Docker setup by exposing port 8019 for Vite development server; update README with detailed project structure and installation steps, including troubleshooting permissions and daily development workflow.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,7 @@ services:
     working_dir: /app
     stdin_open: true
     tty: true
+    ports:
+      - "8019:5173"  # Puerto para el servidor de desarrollo Vite
     volumes:
       - ./app:/app
