Update Docker configuration to expose port 8019 for Vite server; add local notifications dependency in package.json and package-lock.json; adjust Vite server settings in vite.config.js.

--- a/app/package.json
+++ b/app/package.json
@@ -4,14 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --host"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@capacitor/android": "^7.4.3",
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
+    "@capacitor/local-notifications": "^7.0.3",
     "vue": "^3.5.21"
   },
   "devDependencies": {
